# EmoAgent-MemoryCore

./: .gitattributes  .gitignore  EmoAgent-MemoryCore_Handoff.md  LICENSE  README.md  go.mod
cmd/memory-eval/: main.go  main_test.go
cmd/memoryctl/: common.go  compression.go  config.go  config_consumption_test.go  config_test.go  entity.go  episode.go  extract.go  extract_run.go  extract_run_batch_test.go  extract_test.go  fact.go  forget.go  initdb.go  inspect.go  main.go  main_test.go  mirror.go  phase2a_cli_test.go  phase3a_purge_cli_test.go  phase3b_retention_cli_test.go  phase3c_compression_cli_test.go  phase3c_retention_jobs_cli_test.go  phase4a_mirror_cli_test.go  retention.go  (+7 more)
config/: config.go  config_test.go  docs.go  load.go
migrations/: 0001_foundation.sql  0002_graph_policy_index.sql  0003_affect_audit.sql  0004_search_fallback_optional.sql  0005_extraction_runtime.sql  0006_mirror_persona_state.sql  0007_batch_prefetch_indexes.sql  migrations.go
scripts/: memory_eval_matrix.cmd  memory_eval_matrix.ps1  memory_eval_quality.cmd  memory_eval_quality.ps1
sidecar/: README.md  config.example.toml  pyproject.toml
sidecar/memorycore_sidecar/: __init__.py  activation.py  candidates.py  config.py  embedding.py  protocol.py  query_analysis.py  rerank.py  server.py
sidecar/memorycore_sidecar/adapters/: base.py  fake.py  trivium.py
sidecar/tests/: test_activation.py  test_config.py  test_embedding.py  test_fake_adapter.py  test_protocol.py  test_query_analysis.py  test_rerank.py  test_rerank_provider_smoke.py  test_server.py  test_trivium_adapter.py
(+226 files in other folders)
